--- a/vercel.json
+++ b/vercel.json
@@ -2,6 +2,10 @@
   "trailingSlash": false,
   "rewrites": [
     {
+      "source": "/api/users/:path*",
+      "destination": "/api/main.go"
+    },
+    {
       "source": "/api/:path*",
       "destination": "/api/:path*"
     }
