--- a/vercel.json
+++ b/vercel.json
@@ -1,24 +1,24 @@
 {
-  "trailingSlash": false,
-  "rewrites": [
-    {
-      "source": "/api/users/:path*",
-      "destination": "/api/users.go"
-    },
-    {
-      "source": "/api/:path*",
-      "destination": "/api/:path*"
+    "trailingSlash": false,
+    "rewrites": [
+        {
+            "source": "/v1/api/users/:path*",
+            "destination": "/api/users.go"
+        },
+        {
+            "source": "/v1/api/:path*",
+            "destination": "/api/:path*"
+        }
+    ],
+    "redirects": [
+        {
+            "source": "/v1/api/:path*",
+            "destination": "/api/:path*"
+        }
+    ],
+    "build": {
+        "env": {
+            "GO_BUILD_FLAGS": "-ldflags '-s -w'"
+        }
     }
-  ],
-  "redirects": [
-    {
-      "source": "/api/:path*",
-      "destination": "/api/:path*"
-    }
-  ],
-  "build": {
-    "env": {
-      "GO_BUILD_FLAGS": "-ldflags '-s -w'"
-    }
-  }
 }
